--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,21 +8,23 @@ nav:
 plugins:
   - search
   - git-revision-date
+  - pdf-export
 markdown_extensions:  
+  - admonition
+  - pymdownx.details
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
+  - pymdownx.snippets
+  - pymdownx.mark
+  - pymdownx.magiclink
+  - pymdownx.keys
   - toc:
       permalink: true
 repo_name: Github
 repo_url: https://github.com/martinlingstuyl/blimped-mkdocs/
 edit_uri: '/docs'
-# theme: 
-#   name: material  
+theme: 
+  name: material  
   
-#   - admonition
-#   - pymdownx.details
-#   - pymdownx.highlight
-#   - pymdownx.inlinehilite
-#   - pymdownx.superfences
-#   - pymdownx.snippets
-#   - pymdownx.mark
-#   - pymdownx.magiclink
-#   - pymdownx.keys
+
